--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tolkien</title>
-    <link href="./Resources/style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="Assets/CSS/style.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Header including Bootstrap Nav bar -->
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html"><img src="Assets/Images/tolkien.png" ><h4>Tolkien</h4></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="index.html"><h5>Home</h5></a>
+                  <a class="nav-link" href="#"><h5>Early Life</h5></a>
+                  <a class="nav-link" href="#"><h5>Literature</h5></a>
+                  <a class="nav-link" href="#"><h5>Legacy</h5></a>
+                </div>
+              </div>
+            </div>
+          </nav>
+    </header>
 </body>
 </html>
