--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><img src="Assets/Images/tolkien.png" ><h4>Tolkien</h4></a>
+              <a class="navbar-brand" href="index.html"><img src="Assets/Images/tolkien.png" >Tolkien</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -27,5 +27,11 @@
             </div>
           </nav>
     </header>
+    <content>
+      <section>
+        <div id="hero-image">
+        </div>
+      </section>
+    </content>
 </body>
 </html>
