Styled hero-image to fill width of screen flush with edges. Added and styled main heading for page.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,16 @@
           </nav>
     </header>
     <content>
+      <!-- Home page: Title and hero-image of Tolkien -->
+      <h1 id="tolkien">J. R. R. Tolkien</h1>
+      <h4>John Ronald Reuel Tolkien</h4>
       <section>
         <div id="hero-image">
         </div>
       </section>
     </content>
+    <footer>
+      
+    </footer>
 </body>
 </html>
