Added quote and styling to center the text.

--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@
         <div id="hero-image">
         </div>
       </section>
+      <section>
+        <div>
+          <p class="quote">"Still round the corner there may wait, A new road or a secret gate." J. R. R. Tolkien</p>
+        </div>
+      </section>
     </content>
     <footer>
-      
+
     </footer>
 </body>
 </html>
