--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </section>
       <section>
         <div>
-          <p class="quote">"Still round the corner there may wait, A new road or a secret gate." J. R. R. Tolkien</p>
+          <p class="quote">"Still round the corner there may wait, A new road or a secret gate." - J. R. R. Tolkien</p>
         </div>
       </section>
     </content>
